Add more exports for GraalVM 22.3